//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Clients {
  id Int [pk, increment]
  code String [unique, not null]
  intitule String
  adresse String
  telephone String
  profession String
  nature NatureEnum
  comptes CompteClients [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table TypeCompte {
  id Int [pk, increment]
  name String [unique, not null]
  comptes CompteClients [not null]
}

Table CompteClients {
  id Int [pk, increment]
  cle Int
  natCompte Int [not null]
  libelleNatCompte String [not null]
  chapitre Int [not null]
  numero_compte String [unique, not null]
  type_compte_id Int
  client_id Int
  type_compte TypeCompte
  agences Agence [not null]
  client Clients
  type_documents TypesDocuments [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Agence {
  id Int [pk, increment]
  ageCreat Int [unique, not null]
  libAgence String [not null]
  compte_id Int
  compteClientId CompteClients
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table DossiersToTypesDocuments {
  dossiersId Int [not null]
  typesdocumentsId Int [not null]
  type_document TypesDocuments [not null]
  dossier Dossiers

  indexes {
    (dossiersId, typesdocumentsId) [pk]
  }
}

Table TypesDocuments {
  id Int [pk, increment]
  code String [unique, not null]
  nom_type String [not null]
  compte_id Int
  metadonnees MetaDonnees [not null]
  compteClient CompteClients
  pieceName PieceName [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  dossiers_typesDocuments DossiersToTypesDocuments [not null]
}

Table DossierInfo {
  id Int [pk, increment]
  cle String [not null]
  value String [not null]
  dossierId Int
  dossier Dossiers
}

Table Dossiers {
  id Int [pk, increment]
  code String [unique, not null]
  nom String [not null]
  description String
  piece Piece [not null]
  dossierInfos DossierInfo [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  dossiers_typesDocuments DossiersToTypesDocuments [not null]
}

Table PieceName {
  id Int [pk, increment]
  code String [unique, not null]
  nom String [not null]
  typeComptId Int
  typesDocuments TypesDocuments
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Piece {
  id Int [pk, increment]
  code String [unique, not null]
  nom String
  path String
  date_creation DateTime [default: `now()`, not null]
  dossierId Int
  typesDocuments Dossiers
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table MetaDonnees {
  id Int [pk, increment]
  cle String [not null]
  valeur String [not null]
  content String
  typesDocID Int
  typeDocument TypesDocuments
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Enum NatureEnum {
  Physique
  Morale
}

Ref: CompteClients.type_compte_id > TypeCompte.id

Ref: CompteClients.client_id > Clients.id [delete: Cascade]

Ref: Agence.compte_id > CompteClients.id

Ref: DossiersToTypesDocuments.typesdocumentsId > TypesDocuments.id

Ref: DossiersToTypesDocuments.dossiersId > Dossiers.id [delete: Cascade]

Ref: TypesDocuments.compte_id > CompteClients.id

Ref: DossierInfo.dossierId > Dossiers.id

Ref: PieceName.typeComptId > TypesDocuments.id [delete: Cascade]

Ref: Piece.dossierId > Dossiers.id [delete: Cascade]

Ref: MetaDonnees.typesDocID > TypesDocuments.id